rnsc/test_data/rns_integration/error/parser/type_hints/int/not_i32_with_space.rns
.class @int "not an int" ; <- has space and should be quoted in help
.super java/lang/Object